executable('some_matrix_types',
	   'some_matrix_types.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('expr_usage',
	   'expr_usage.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('expr_usage_2',
	   'expr_usage_2.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('vector_block',
	   'vector_block.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('matrix_view',
	   'matrix_view.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('row_view',
	   'row_view.cpp',
	   dependencies : [LinearAlgebra_dep])
