executable('some_matrix_types',
	   'some_matrix_types.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('expr_usage',
	   'expr_usage.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('expr_usage_2',
	   'expr_usage_2.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('vector_block',
	   'vector_block.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('matrix_view',
	   'matrix_view.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('conjugate_gradients',
	   'conjugate_gradients.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('lapack_potrf',
	   'lapack_potrf.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('lb_ub',
	   'lb_ub.cpp',
	   dependencies : [LinearAlgebra_dep])


executable('vector_extra_constructors',
	   'vector_extra_constructors.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('custom_matrix',
	   'custom_matrix.cpp',
	   dependencies : [LinearAlgebra_dep])

#################################################################

executable('doc_size_utils',
	   'doc_size_utils.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('how_to_new_vector_type',
	   'how_to_new_vector_type.cpp',
	   dependencies : [LinearAlgebra_dep])
