
# executable('garbage',
# 	   'garbage.cpp',
# 	   dependencies : [LinearAlgebra_dep])

# # deprecated
# executable('deprecated_experimental_meta_expr',
# 	   'deprecated_experimental_meta_expr.cpp',
# 	   dependencies : [LinearAlgebra_dep])

# executable('experimental_meta_expr',
# 	   'experimental_meta_expr.cpp',
# 	   dependencies : [LinearAlgebra_dep])

executable('reverse_Polish',
	   'reverse_Polish.cpp',
	   dependencies : [LinearAlgebra_dep])
