
executable('garbage',
	   'garbage.cpp',
	   dependencies : [LinearAlgebra_dep])

# deprecated
executable('deprecated_experimental_meta_expr',
	   'deprecated_experimental_meta_expr.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('experimental_meta_expr',
	   'experimental_meta_expr.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('reverse_Polish',
	   'reverse_Polish.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('scalar_ref',
	   'scalar_ref.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('lapack_example',
	   'lapack_example.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('lapack_Cholesky',
	   'lapack_Cholesky.cpp',
	   dependencies : [LinearAlgebra_dep])

executable('function',
	   'function.cpp',
	   dependencies : [LinearAlgebra_dep])
