LinearAlgebra_headers += [

  'dense/memory_chunk.hpp',
  
  'dense/matrix_special_structure_enum.hpp',
  'dense/matrix_storage_mask_enum.hpp',
  
  # Common to vector, matrix etc..
  #
  'dense/vector_are_compatible.hpp',
  
  'dense/vector_crtp_fwd.hpp',
  'dense/matrix_crtp_fwd.hpp',

  'dense/vector_crtp.hpp',
  'dense/matrix_crtp.hpp',

  'dense/vector_storage_scheme.hpp',
  'dense/matrix_storage_scheme.hpp',

  'dense/vector.hpp',
  'dense/matrix.hpp',

  'dense/vector_fill.hpp',
  'dense/matrix_fill.hpp',

  'dense/vector_transform.hpp',
  'dense/matrix_transform.hpp',

  'dense/vector_map.hpp',
  'dense/matrix_map.hpp',

  'dense/vector_create_default_storable.hpp',
  'dense/matrix_create_default_storable.hpp',
]
