LinearAlgebra_headers += [
  'dense/vmt_crtp.hpp',
  'dense/vmt_crtp_fwd.hpp',
  
  'dense/memory_chunk.hpp',

  'dense/matrix_special_structure_enum.hpp',
  'dense/matrix_storage_mask_enum.hpp',

  #
  # Common to vector, matrix etc..
  #
  'dense/vector_fwd.hpp',
  'dense/matrix_fwd.hpp',

  'dense/vector_are_compatible.hpp',
  'dense/matrix_are_compatible.hpp',

  'dense/vector_crtp_fwd.hpp',
  'dense/matrix_crtp_fwd.hpp',

  'dense/vector_crtp.hpp',
  'dense/matrix_crtp.hpp',

  'dense/vector_storage_scheme.hpp',
  'dense/matrix_storage_scheme.hpp',

  'dense/vector.hpp',
  'dense/matrix.hpp',

  'dense/vector_fill.hpp',
  'dense/matrix_fill.hpp',

  'dense/vector_transform.hpp',
  'dense/matrix_transform.hpp',

  'dense/vector_scan.hpp',
  'dense/matrix_scan.hpp',

  'dense/vector_map.hpp',
  'dense/matrix_map.hpp',

  'dense/vector_similar.hpp',
  'dense/matrix_similar.hpp',

  'dense/vector_view.hpp',
  'dense/matrix_view.hpp',

  'dense/memory_chunk_aliasing_p.hpp',

  'dense/vmt_comparison_operators.hpp',
  'dense/vector_comparison_operators.hpp',
  'dense/matrix_comparison_operators.hpp',

  'dense/matrix_header.hpp',
  'dense/vector_header.hpp',

  'dense/vmt_assignment_operator_define.hpp',

  'dense/vector_extra_constructors.hpp',
  'dense/matrix_extra_constructors.hpp',

  'dense/dynamic_to_static_helper.hpp',
]
