LinearAlgebra_headers += [
  'expr_of_the_poor/expr_tags.hpp',
  'expr_of_the_poor/expr_selector.hpp',
  'expr_of_the_poor/dimension.hpp',
  'expr_of_the_poor/known_patterns.hpp',
  'expr_of_the_poor/known_patterns_impl.hpp',
  'expr_of_the_poor/scalar_functions.hpp',

  'expr_of_the_poor/X_assign_X.hpp',
  'expr_of_the_poor/V0_assign_alpha_V0_plus_beta_op_M_V1.hpp',
  
  'expr_of_the_poor/expr_of_the_poor.hpp', # main header: include all expr 
]
