LinearAlgebra_headers += [
  'scalar_functions/scalar_functions_vector.hpp', # main header file
  'scalar_functions/scalar_functions_matrix.hpp', # main header file

  'scalar_functions/dot.hpp',
  'scalar_functions/dot_vector.hpp',

  'scalar_functions/norm_2.hpp',
  'scalar_functions/norm_2_vector.hpp',

  'scalar_functions/dist_2.hpp',
  'scalar_functions/dist_2_vector.hpp',

  'scalar_functions/norm_inf.hpp',
  'scalar_functions/norm_inf_vector.hpp',

]
